--- a/references.bib
+++ b/references.bib
@@ -635,8 +635,8 @@ Based on the census data from Shanxi Province, we investigate stroke risk factor
 
 @misc{pearn_identifying_2024,
 	title = {Identifying levers for improving thrombolysis use and outcomes – combining clinical pathway simulation and machine learning},
-	url = {https://zenodo.org/records/12798344},
-	doi = {10.5281/zenodo.12798344},
+	url = {https://doi.org/10.5281/zenodo.13252978},
+	doi = {10.5281/zenodo.13252978},
 	urldate = {2024-07-23},
 	publisher = {Zenodo},
 	author = {Pearn, Kerry and Allen, Michael and Laws, Anna and McMeekin, Peter and James, Martin},
