--- a/sections/03_intro.tex
+++ b/sections/03_intro.tex
@@ -38,9 +38,11 @@ Specific objectives for the current study were:
 
     \item \textbf{Investigate how well organisation factors (from the SSNAP organisational audit) predict thrombolysis use}, to identify whether aspects of the organisation impacts the decision to treat.
 
+    \item Include ambulance response times in patient flow modelling, and test how improvement of ambulance response time would affect thrombolysis use and benefit.
+
     \item \textbf{Generation of a web-based dashboard} to allow clinicians to interrogate modelling.
 
-    \item \textbf{Generation of synthetic data and artificial patient vignettes (virtual patients)} for enhanced sharing of the modelling (sharing working code with data).
+    \item \textbf{Generation of synthetic data and artificial patient vignettes (\textit{virtual patients}, or \textit{prototype patients})} for enhanced sharing of the modelling (sharing working code with data).
 
     \item \textbf{Co-production of project outputs with clinicians} to promote acceptance and use for local quality improvement.
     
