--- a/sections/11_paper_1.tex
+++ b/sections/11_paper_1.tex
@@ -11,71 +11,69 @@ What should a machine-learning model based on SSNAP data look like, do, and deli
 
 \subsection{Methods overview}
 
-We used focussed observations, semi-structured interviews and documentary analysis, to examine perceptions of thrombolysis, SSNAP, and machine learning. The Non-adoption, Abandonment, and Challenges to the Scale-Up, Spread, and Sustainability of Health and Care Technologies (NASSS) framework \cite{greenhalgh_beyond_2017} was used as a sensitising device to help us understand socio-technical factors likely to affect adoption and scale-up of SAMueL-2 technology.
+We used focussed observations, semi-structured interviews and documentary analysis, to examine perceptions of thrombolysis, SSNAP, and machine learning. The NASSS (non-adoption, abandonment, scale-up, spread, sustainability) framework \cite{greenhalgh_beyond_2017} was used as a sensitising device to help us understand socio-technical factors likely to affect adoption and scale-up of SAMueL-2 technology.
 
 Semi-structured interviews were conducted with 20 participants from the three observation sites and five key informants (senior clinicians/managers involved in stroke initiatives) based at other sites. The number of participants by role was:
 
 \begin{itemize}
 
-    \item \textit{Consultant}: 11 Stroke, 3 Emergency Department (ED), 1 Care of the Elderly
+    \item \textit{Consultant}: 11 stroke, 3 emergency department (ED), 1 care of the elderly
 
-    \item \textit{Associate Specialist Doctor (ED)}: 1 ED
+    \item \textit{Associate specialist doctor (ED)}: 1 ED
 
-    \item \textit{Registrar}: 1 Stroke, 1 ED 
+    \item \textit{Registrar}: 1 stroke, 1 ED 
 
-    \item \textit{Stroke Assessor \& Nurse}: 2
+    \item \textit{Stroke assessor \& nurse}: 2
 
-    \item \textit{Stroke Nurse}: 1
+    \item \textit{Stroke nurse}: 1
     
-    \item \textit{Advanced Clinical Practitioner (Stroke)}: 1
+    \item \textit{Advanced clinical practitioner (stroke)}: 1
 
-    \item \textit{Stroke Unit Administrator}: 1
+    \item \textit{Stroke unit administrator}: 1
 
-    \item \textit{IT Co-ordinator (Stroke)}: 1
+    \item \textit{Information technology (IT) co-ordinator (stroke)}: 1
 
-    \item \textit{Integrated Stroke Delivery Network manager}: 1
+    \item \textit{Integrated Stroke Delivery Network (ISDN) manager}: 1
     
 \end{itemize}
 
-Observation of healthcare professionals and work practices involved in the acute stroke pathway in three NHS Trusts (acute hospitals) in England (hereafter referred to as Sites A, B and C) was conducted. We used SSNAP data to purposefully select hospitals with low rates of thrombolysis and ensured they had differing stroke pathways and were geographically dispersed. 184 hours of focussed observation across the three sites comprising a variety of day/evening/night and weekend shifts was conducted, observing stroke care as well as clinical governance and multi-disciplinary team stroke review and SSNAP review meetings. Additionally, observation of online meetings of Integrated Stroke Delivery Networks (ISDNs) and other organisations with strategic overview of stroke services in the NHS took place, with a focus on thrombolysis. 
+Observation of healthcare professionals and work practices involved in the acute stroke pathway in three NHS Trusts (acute hospitals) in England (hereafter referred to as Sites A, B and C) was conducted. We used SSNAP data to purposefully select hospitals with low rates of thrombolysis and ensured they had differing stroke pathways and were geographically dispersed. 184 hours of focussed observation across the three sites comprising a variety of day/evening/night and weekend shifts was conducted, observing stroke care as well as clinical governance and multi-disciplinary team stroke review and SSNAP review meetings. Additionally, observation of online meetings of ISDNs and other organisations with strategic overview of stroke services in the NHS took place, with a focus on thrombolysis. 
 
-A third source of data was documents: we collected Trust-level documents (such as thrombolysis protocols and quality improvement (QI) initiative documentation); policy and strategy documents at ISDN level; computer modellers’ presentations to stakeholders (clinicians, senior managers, policymakers); modelling team summaries of feedback from stakeholders.
+A third source of data was documents: we collected Trust-level documents (such as thrombolysis protocols and quality improvement, QI, initiative documentation); policy and strategy documents at ISDN level; computer modellers’ presentations to stakeholders (clinicians, senior managers, policymakers); modelling team summaries of feedback from stakeholders.
 
 \subsection{Key results}
 
-We present findings in relation to six NASSS domains: the condition, the technology, the value proposition, the intended adopters, the healthcare organisation, and the wider system.
+We present findings in relation to six NASSS domains: (1) the condition, (2) the technology, (3) the value proposition, (4) the intended adopters, (5) the healthcare organisation, and (6) the wider system.
 
-\subsubsection{Domain 1: The Condition}
+\subsubsection{Domain 1: The condition}
 
-Physicians emphasised the heterogeneous and complex nature of the presentation of patients with stroke. They frequently used the concept ‘barn door’ to refer to a situation when a patient was perceived to be presenting with ‘classic’ symptoms of ischaemic stroke and where guidelines for treatment could easily be followed and decision-making was straight-forward. However, physicians suggested most patients were not ‘barn-door’ presentations, making decisions regarding thrombolysis more challenging.
+Physicians emphasised the heterogeneous and complex nature of the presentation of patients with stroke. They frequently used the concept ‘barn door’ to refer to a situation when a patient was perceived to be presenting with ‘classic’ symptoms of ischaemic stroke and where guidelines for treatment with thrombolysis could easily be followed and decision-making was straight-forward. However, physicians suggested most patients were not ‘barn-door’ presentations (also known as \textit{clinical grey areas}), making decisions regarding thrombolysis more challenging.
 
 Clinicians stressed the complexity of decision-making with respect to thrombolysis, particularly in clinical grey areas, and the perceived level of risk involved in the procedure. They discussed weighing up the risks/benefits in each case and challenges of obtaining informed consent for thrombolysis.
 
 Clinicians characterised themselves and colleagues as pro or anti-thrombolysis, or keen or reluctant thrombolysers, the latter typically because they had experience of negative patient outcomes following thrombolysis and/or were generally more risk averse. Some reservations were also expressed about targets to improve thrombolysis rates.
 
-\subsubsection{Domain 2: The Technology}
+\subsubsection{Domain 2: The technology}
 
-understandings and experiences of SSNAP and of machine learning-based modelling, and of how they might come together.
-
-Participants from one of the sites, emphasised the necessity of the SAMueL-2 technology incorporating data on the configuration of acute stroke services for it to be seen as having validity. Most participants expressed having trust and confidence in SSNAP data and some referred to its potential to improve stroke services, but not all understood or engaged with the programme and thus were unsure how machine learning from SSNAP data could improve thrombolysis decision-making. Others, were more enthusiastic about the potential for machine learning to extend the utility of SSNAP as a learning system for quality improvement. The addition of machine learning to the SSNAP portal was mooted as improving its sensitivity and potential for quality improvement vis-à-vis thrombolysis.
+Participants from one of the sites emphasised the necessity of the SAMueL-2 technology incorporating data on the configuration of acute stroke services for it to be seen as having validity. Most participants expressed having trust and confidence in SSNAP data and some referred to its potential to improve stroke services, but not all understood or engaged with the programme and thus were unsure how machine learning from SSNAP data could improve thrombolysis decision-making. Others were more enthusiastic about the potential for machine learning to extend the utility of SSNAP as a learning system for quality improvement. The addition of machine learning to the SSNAP portal was mooted as improving its sensitivity and potential for quality improvement vis-à-vis thrombolysis.
 
 Some clinicians discussed their current use of AI based systems such as Brainomix or RapidAI and showed interest in SAMueL-2 becoming interoperable with these systems. Others expressed scepticism.
 
-\subsubsection{Domain 3: The Value Proposition}
+\subsubsection{Domain 3: The value proposition}
 
 Reporting in this NASSS domain focusses on perceived demand-side value (while perceived supply-side value is reported as part of Domain 6 ‘The Wider System’). SAMueL-2 can be characterised as being at the value promise \textit{developmental} stage; our data reflects the perceived or anticipated value of the technology which is relatively speculative.
 
-SAMueL-2 was seen by some as providing the potential to address variation in clinical practice between clinicians and across trusts. Many participants perceived value in the potential for machine learning to help them in clinical grey areas when decision-making was most difficult, but there was uncertainty and ambivalence regarding whether this would/could happen during the acute stroke pathway. They hoped the SAMueL-2 technology would provide more specific and objective assessments of risk/benefit of the procedure and inform consent discussions. Some perceived it to be inevitable that AI/machine learning would eventually be used in real-time at the point of care. Some clinicians saw the value of the benchmarking feature of the web app to change culture or local thrombolysis guidelines. However, it was emphasised that this benchmarking should include data on patient complications and outcomes for it to be seen as valid and useful.
+SAMueL-2 was seen by some as providing the potential to address variation in clinical practice between clinicians and across trusts. Many participants perceived value in the potential for machine learning to help them in clinical grey areas when decision-making was most difficult, but there was uncertainty and ambivalence regarding whether this would/could happen during the acute stroke pathway. They hoped the SAMueL-2 technology would provide more specific and objective assessments of risk/benefit of the procedure and inform consent discussions. Some perceived it to be inevitable that AI/machine learning would eventually be used in real-time at the point of care. Some clinicians saw the value of the web app benchmarking feature to change culture or local thrombolysis guidelines. However, it was emphasised that this benchmarking should include data on patient complications and outcomes for it to be seen as valid and useful.
 
-Participants discussed the perceived utility of the SAMueL-2 technology as a ‘learning tool’ to review clinical cases and provide training or quality assurance, for example at governance meetings. It was perceived as being useful as a decision-aid for trainees, non-stroke specialists and at district general hospitals (DGH)
+Participants discussed the perceived utility of the SAMueL-2 technology as a ‘learning tool’ to review clinical cases and provide training or quality assurance, for example at governance meetings. It was perceived as being useful as a decision-aid for trainees, non-stroke specialists and at district general hospitals.
 
-\subsubsection{Domain 4: The Intended Adopters}
+\subsubsection{Domain 4: The intended adopters}
 
-Some Emergency Department physicians were less confident about the evidence base for thrombolysis. They expressed a lack of faith in the clinical trials and reluctance to thrombolyse due to perceived risks of the procedure. One said they preferred thrombectomy to thrombolysis because they perceived that thrombectomy had more robust evidence to support it and fewer risks associated with it.
+Some ED physicians were less confident about the evidence base for thrombolysis. They expressed a lack of faith in the clinical trials and reluctance to thrombolyse due to perceived risks of the procedure. One said they preferred thrombectomy to thrombolysis because they perceived that thrombectomy had more robust evidence to support it and fewer risks associated with it.
 
-Some interviewees asserted that the benchmarking feature of the web app was not suitable or useful for experienced consultants like themselves, emphasising trust in their own clinical acumen. Others worried about how benchmarking and comparison might be used and were anxious about how it might affect them. Concern was also expressed that AI might be given primacy over clinical decision-making and that this could adversely affect patient outcome.
+Some interviewees asserted that the web app benchmarking feature was not suitable or useful for experienced consultants like themselves, emphasising trust in their own clinical acumen. Others worried about how benchmarking and comparison might be used and were anxious about how it might affect them. Concern was also expressed that AI might be given primacy over clinical decision-making and that this could adversely affect patient outcome.
 
-\subsubsection{Domain 5: The Healthcare Organisation}
+\subsubsection{Domain 5: The healthcare organisation}
 
 Participants discussed recent successful quality improvement initiatives regarding stroke, for example, improvement in door-to-needle times. For example, site A had initiated a stroke quality improvement week, and Site B had undertaken a reconfiguration of the acute stroke pathway which involved new stroke nurse assessor roles and stroke healthcare assistants. Each team member had been designated specific tasks facilitating speed of the acute pathway. Most participants at site B felt confident in the acute stroke processes and that there was readiness for organisational change. One participant suggested that there was potential for experienced non-consultant level staff to thrombolyse without a consultant being present to speed up the process.
 
@@ -90,7 +88,7 @@ However, participants also described organisational-level barriers they perceive
 
     \item limited availability of imaging
 
-    \item a cultures that doesn't support use of thrombolysis
+    \item a culture that doesn't support use of thrombolysis
 
     \item funding constraints
 
@@ -102,12 +100,12 @@ However, participants also described organisational-level barriers they perceive
 
 Some people were enthusiastic that SAMueL-2 technology could be instrumental in overcoming these institutional barriers.
 
-\subsubsection{Domain 6: The Wider System}
+\subsubsection{Domain 6: The wider system}
 
 Our analysis indicated that the wider professional and political context was important for adoption and scale-up of SAMueL-2. Stakeholders and participants from ISDNs were, with some expressed reservations about usability of the SSNAP interface, enthusiastic about SAMueL-2 being added to the portal and about facilitating its roll out to and uptake by sites for quality improvement.
 
-The development of machine learning in conjunction with SSNAP was referred to by one national level policymaker as offering, “the prospect of contributing significantly to reductions in stroke-related disability” [stakeholder communication] and was seen as having relevance to the NHS Long Term Plan. This appears to constitute a clear supply-side value proposition. The TASC initiative provided a ‘policy push’ for SAMueL-2 technology implementation, albeit initially on a limited scale.
+The development of machine learning in conjunction with SSNAP was referred to by one national level policymaker as offering “the prospect of contributing significantly to reductions in stroke-related disability” [stakeholder communication] and was seen as having relevance to the NHS Long Term Plan. This appears to constitute a clear supply-side value proposition. The TASC initiative provided a ‘policy push’ for SAMueL-2 technology implementation, albeit initially on a limited scale.
 
 \subsection{Conclusions}
 
-In this study we drew on the NASSS framework to help understand the socio-technical factors likely to affect the adoption and scale-up of SAMueL-2 technology. We identified three learning points which may facilitate further implementation of the technology. First, given reservations expressed by some of our participants and healthcare professionals elsewhere about the underpinning SSNAP data it seems important to ensure that intended adopters are reassured about the integrity of modelling based on this data. Second, evidence from this research and elsewhere indicates that the ED physicians’ may have less confidence in the evidence base for, and safety of thrombolysis. It is therefore likely that more work will need to be done with the ED physician community to build trust in the SAMuel-2 technology: recruiting ED physicians as brokers/clinical champions may address this. Third, perceived lack of funding/resource and stroke workforce shortages may impede quality improvement and adoption of new technologies such as SAMueL-2. It will therefore be vital to address these concerns to ensure sustained use and adoption.
+In this study we drew on the NASSS framework to help understand the socio-technical factors likely to affect the adoption and scale-up of SAMueL-2 technology. We identified three learning points which may facilitate further implementation of the technology. First, given reservations expressed by some of our participants and healthcare professionals elsewhere about the underpinning SSNAP data it seems important to ensure that intended adopters are reassured about the integrity of modelling based on this data. Second, evidence from this research and elsewhere indicates that the ED physicians’ may have less confidence in the evidence base for, and safety of thrombolysis. It is therefore likely that more work will need to be done with the ED physician community to build trust in the SAMuel-2 technology: recruiting ED physicians as brokers/clinical champions may help to address this. Third, perceived lack of funding/resource and stroke workforce shortages may impede quality improvement and adoption of new technologies such as SAMueL-2. It will therefore be vital to address these concerns to ensure sustained use and adoption.
